[package]
name = "yawp"
version = "0.1.0"
authors = ["Hugh Rundle <hugh@hughrundle.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.33.0"
oauth = { version = "^0.5", package = "oauth1-request" }
reqwest = { version = "^0.11.2", features = ["blocking"] }