[package]
name = "yawp"
version = "0.1.0"
authors = ["Hugh Rundle <hugh@hughrundle.net>"]
edition = "2018"
readme = "README.md"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hughrun/yawp/"
keywords = ["mastodon", "twitter"]
categories = ["command-line-utilities"]

[dependencies]
clap = "^2.33.0"
oauth = { version = "^0.5", package = "oauth1-request" }
reqwest = { version = "^0.11.2", features = ["blocking"] }